--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,14 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+chrono = "0.4.41"
 config = "0.15.13"
 dotenvy = "0.15.7"
 futures = "0.3.31"
 futures-util = "0.3.31"
 serde = "1.0.219"
 serde_json = "1.0.140"
+sled = "0.34.7"
 tokio = {version = "1.46.1", features = ["full"]}
 tokio-tungstenite = "0.27.0"
 tungstenite = "0.27.0"
