--- a/src/config/default.toml
+++ b/src/config/default.toml
@@ -1,7 +1,22 @@
+# config/default
+
+# ========================
+# Server Configuration
+# ========================
 [server]
+# Host address the server should bind to (e.g., "127.0.0.1", "0.0.0.0", or a domain)
 host = "127.0.0.1"
+
+# Port number for the WebSocket server to listen on
 port = 8080
 
+# ========================
+# Broker Configuration
+# ========================
 [broker]
+# Maximum number of concurrent WebSocket connections allowed
 max_connections = 1000
+
+# Time-to-live (TTL) for messages in seconds
+# Messages older than this will be cleaned up from persistence storage
 message_ttl_secs = 3600
