--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,10 @@ futures = "0.3.31"
 futures-util = "0.3.31"
 serde = "1.0.219"
 serde_json = "1.0.140"
+serial_test = "3.2.0"
 sled = "0.34.7"
+temp-env = "0.3.6"
+tempfile = "3.20.0"
 tokio = {version = "1.46.1", features = ["full"]}
 tokio-tungstenite = "0.27.0"
 tungstenite = "0.27.0"
