--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 chrono = "0.4.41"
+clippy = "0.0.302"
 config = "0.15.13"
 dotenvy = "0.15.7"
 futures = "0.3.31"
