--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,5 +18,7 @@ temp-env = "0.3.6"
 tempfile = "3.20.0"
 tokio = {version = "1.46.1", features = ["full"]}
 tokio-tungstenite = "0.27.0"
+tracing = "0.1"
+tracing-subscriber = "0.3"
 tungstenite = "0.27.0"
 uuid = { version = "1.8", features = ["v4"] }
