--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,13 +4,14 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-chrono = "0.4.41"
+chrono = { version = "0.4.41", features = ["serde"] }
 clippy = "0.0.302"
 config = "0.15.13"
 dotenvy = "0.15.7"
 futures = "0.3.31"
 futures-util = "0.3.31"
-serde = "1.0.219"
+jsonwebtoken = "9.3.0"
+serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 serial_test = "3.2.0"
 sled = "0.34.7"
