--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,7 @@ tracing = "0.1"
 tracing-subscriber = "0.3"
 tungstenite = "0.27.0"
 uuid = { version = "1.8", features = ["v4"] }
+
+[dev-dependencies]
+cargo-tarpaulin = "0.27.0"
+portpicker = "0.1.1"
