arefactored codebase into crates

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,8 @@ db
 conf
 pubsub_db
 
+# log files
+*.log
 
 # RustRover
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
