--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,29 +1,11 @@
-[package]
-name = "popsub"
-version = "0.1.0"
-edition = "2024"
-
-[dependencies]
-chrono = { version = "0.4.41", features = ["serde"] }
-clippy = "0.0.302"
-config = "0.15.13"
-dotenvy = "0.15.7"
-futures = "0.3.31"
-futures-util = "0.3.31"
-jsonwebtoken = "9.3.0"
-serde = { version = "1.0.219", features = ["derive"] }
-serde_json = "1.0.140"
-serial_test = "3.2.0"
-sled = "0.34.7"
-temp-env = "0.3.6"
-tempfile = "3.20.0"
-tokio = {version = "1.46.1", features = ["full"]}
-tokio-tungstenite = "0.27.0"
-tracing = "0.1"
-tracing-subscriber = "0.3"
-tungstenite = "0.27.0"
-uuid = { version = "1.8", features = ["v4"] }
-
-[dev-dependencies]
-cargo-tarpaulin = "0.27.0"
-portpicker = "0.1.1"
+[workspace]
+members = [
+	"crates/popsub",
+	"crates/popsub_broker",
+	"crates/popsub_client",
+	"crates/popsub_config",
+	"crates/popsub_persistence",
+	"crates/popsub_transport",
+	"crates/popsub_utils",
+]
+resolver = "3"
