--- a/crates/popsub_broker/Cargo.toml
+++ b/crates/popsub_broker/Cargo.toml
@@ -14,3 +14,4 @@ popsub_persistence = { path = "../popsub_persistence" }
 tokio = { version = "1.46.1", features = ["full"] }
 tungstenite = "0.28.0"
 tempfile = "3.20.0"
+tracing = "0.1"
